--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
+ 
   <meta name="theme-color" content="#1976d2">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+  <link href="  https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css  " rel="stylesheet">
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"></head>
+  <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css"> 
+  <style>
+  .theme-green .bs-datepicker-head {
+    background-color: #3794a3 !important;
+}
+
+  .dropdown-menu-left {
+  left: -126px !important;
+}
+</style>
+  <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
   <script>
