--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,15 @@
   <meta name="theme-color" content="#1976d2">
   <link href="  https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css  " rel="stylesheet">
 
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"></head>
-  <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css"> 
+   <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css"> 
   <style>
   .theme-green .bs-datepicker-head {
     background-color: #3794a3 !important;
 }
+.chs{
+  left: -126px !important;
 
+}
   .dropdown-menu-left {
   left: -126px !important;
 }
