--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,13 @@
   <meta name="theme-color" content="#1976d2">
   <link href="  https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css  " rel="stylesheet">
 
-   <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css"> 
+   <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
+   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+   <script src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
+   <!-- or however you want to include -->
+ 
+   <script src="https://rawcdn.githack.com/kemayo/maphilight/7932449fbc49c7767fbd72a807110c632c11ee95/jquery.maphilight.js"></script>
+  
   <style>
   .theme-green .bs-datepicker-head {
     background-color: #3794a3 !important;
