--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
    <script src="https://rawcdn.githack.com/kemayo/maphilight/7932449fbc49c7767fbd72a807110c632c11ee95/jquery.maphilight.js"></script>
   
   <style>
+    .mat-menu-content{
+      padding:0 !important;
+    }
   .theme-green .bs-datepicker-head {
     background-color: #3794a3 !important;
 }
