--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
- 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <meta name="theme-color" content="#1976d2">
   <link href="  https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css  " rel="stylesheet">
 
@@ -18,7 +19,7 @@
    <!-- or however you want to include -->
  
    <script src="https://rawcdn.githack.com/kemayo/maphilight/7932449fbc49c7767fbd72a807110c632c11ee95/jquery.maphilight.js"></script>
-  
+
   <style>
     .mat-menu-content{
       padding:0 !important;
