--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
    <!-- or however you want to include -->
  
    <script src="https://rawcdn.githack.com/kemayo/maphilight/7932449fbc49c7767fbd72a807110c632c11ee95/jquery.maphilight.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
 
   <style>
     .mat-menu-content{
