--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
 
   <style>
+       .modal-lg{
+    max-width: 918px !important;
+              }
     .mat-menu-content{
       padding:0 !important;
     }
